@@ -1,3 +1,9 @@
+2017-08-01  Martin Liska  <mliska@suse.cz>
+
+	PR gcov-profile/81561
+	* gcov.c (unblock): Make unblocking safe as we need to preserve
+	index correspondence of blocks and block_lists.
+
 2017-08-01  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/81181
